--- a/apps/slime-client/_locales/en/messages.json
+++ b/apps/slime-client/_locales/en/messages.json
@@ -1,5 +1,11 @@
 {
-    "Submit": {
-        "message": "Submit"
+    "extName": {
+        "message": "Slime - Open Source Coupon Discovery"
+    },
+    "extDescription": {
+        "message": "Slime is a open source alternative for coupon discovery, without modify affiliate codes and focus on community feedback!"
+    },
+    "reportCouponOrRedeemCode": {
+        "message": "Report Coupon or Redeem Code"
     }
 }
